<resources>
    <string name="app_name">Whack-A-Bunny</string>
    <string name="lives_count_label">Lives: 5</string>
    <string name="score_count_label">Score: 0</string>
    <string name="image_desc">This is an animation of a bunny</string>
    <string name="start_button_label">START</string>
    <string name="easy_label">EASY</string>
    <string name="hard_label">HARD</string>
    <string name="objective_label">Tap on as many bunnies as you can!</string>
    <string name="title_label">Get the Bunny!</string>
    <string name="try_again_label">TRY AGAIN</string>
    <string name="exit_label">EXIT</string>
    <string name="game_over_label">Better Luck Next Time!</string>
</resources>
