<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.celenaflores.practice.MainActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/easy_button"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/hard_button"
        android:layout_alignBottom="@+id/hard_button"
        android:layout_alignStart="@+id/objective_tv"
        android:text="@string/easy_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/objective_tv"
        android:layout_alignTop="@+id/objective_tv"
        android:layout_marginTop="45dp"
        android:text="@string/hard_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="341dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/objective_tv"
        android:layout_width="329dp"
        android:layout_height="65dp"
        android:layout_alignStart="@+id/title_tv"
        android:layout_below="@+id/bunny_iv"
        android:layout_marginTop="22dp"
        android:text="@string/objective_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        tools:layout_editor_absoluteY="405dp" />

    <ImageView
        android:id="@+id/bunny_iv"
        android:layout_width="196dp"
        android:layout_height="201dp"
        android:layout_below="@+id/title_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        android:src="@drawable/o" />

</RelativeLayout>
